--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <body>
         
         <h2>Contents of the file:</h2></br>
-        <pre id="file-content"></pre>
-        <button onclick="post_raw_data()">Post Song's Chords</button>
+        <button onclick="post_raw_data()">Post Song's Chords</button></br>
+        <textarea id="file-content"></textarea>
 
     </body>
     <script>
@@ -31,5 +31,4 @@
         }
         
     </script>
-
 </html>
