--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                    document.getElementById("file-content").value = xhttp.responseText;
                 }
             };
-            xhttp.open("GET", "https://raw.githubusercontent.com/hsaygan/Android-Design-Smell-Analyzation/master/README.md?token=AZc5PUKsiPn3P_pe6G6sWrhBXmvnXCehks5a2jR4wA%3D%3D", true);
+            xhttp.open("GET", "https://raw.githubusercontent.com/hsaygan/Chords-Station/master/Chords/Local%20Train/Aaftaab.chords", true);
             xhttp.send();
         }
         
