--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <body>
         <center>
             <h2>Chords Station</h2>
-            <iframe id="youtube_video" width="560" height="315" src="" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe id="youtube_video" width="560" height="315" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		    <h2 id="timer" style="font-size: 5vw">Time!</h2>
             <h2 id="display_chord" style="font-size: 7vw"></h2>
         </center>
     </body>
-    <script type="text/javascript" src="Scripts/custom.js"></script>
+    <script type="text/javascript" src="Scripts/custom.js">Nothing</script>
 </html>
