--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
     <head>
         <meta charset="utf-8">
         <title>Chords Convertor</title>
-
-        <!--script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script-->
         <script type="text/javascript" src="Scripts/easytimer.min.js"></script>
-        <link href="https://fonts.googleapis.com/css?family=Gamja+Flower|Merriweather|Roboto+Slab" rel="stylesheet">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gamja+Flower|Merriweather|Roboto+Slab">
     </head>
     <body>
         <center>
             <h2 style="font-family: 'Gamja Flower', serif; color: grey; font-size: 6vw">Chords Station</h2>
             <h3 style="font-family: 'Gamja Flower', serif; font-size: 4vw">Play the song as soon as the page loads (as soon as the Timer starts).</br>Following container will display the associated chord <br> in coordination to the time in the song.</h3>
-            <iframe id="youtube_video" width="560" height="315" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-		    <h2 id="timer" style="font-family: 'Merriweather', serif; font-size: 5vw">Time!</h2>
+            <div id="video_div"></div><br>
+                <i class="fa fa-play" onclick="findSongChords('Dil Mere', 'Local Train');" style="font-size: 5vw"></i>&emsp;&emsp;&emsp;
+                <i class="fa fa-stop" onclick="stopVideo()" style="font-size: 5vw"></i></br>
+            <h2 id="timer" style="font-family: 'Merriweather', serif; font-size: 5vw">Time!</h2>
             <h2 id="display_chord" style="font-family: 'Roboto Slab', serif; font-size: 7vw"></h2>
         </center>
     </body>
