--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     </head>
     <body>
         <center>
-            <h2 style="font-family: 'Gamja Flower', serif; color: grey; font-size: 6vw">Chords Station</h2>
-            <h3 style="font-family: 'Gamja Flower', serif; font-size: 4vw">Play the song as soon as the page loads (as soon as the Timer starts).</br>Following container will display the associated chord <br> in coordination to the time in the song.</h3>
-            <div id="video_div"></div><br>
-                <i class="fa fa-play" onclick="findSongChords('Dil Mere', 'Local Train');" style="font-size: 5vw"></i>&emsp;&emsp;&emsp;
-                <i class="fa fa-stop" onclick="stopVideo()" style="font-size: 5vw"></i></br>
-            <h2 id="timer" style="font-family: 'Merriweather', serif; font-size: 5vw">Time!</h2>
-            <h2 id="display_chord" style="font-family: 'Roboto Slab', serif; font-size: 7vw"></h2>
+            <h2 style="font-family: 'Gamja Flower', serif; color: grey; font-size: 6vh">Chords Station</h2>
+            <h3 style="font-family: 'Gamja Flower', serif; font-size: 3vh">Play the song as soon as the page loads (as soon as the Timer starts).</br>Following container will display the associated chord <br> in coordination to the time in the song.</h3>
+            <h2 id="timer" style="font-family: 'Merriweather', serif; font-size: 5vh">Time!</h2>
+            <div id="video_div"></div>
+            <h2 id="display_chord" style="font-family: 'Roboto Slab', serif; font-size: 7vh">Chords!</h2>
+                <i class="fa fa-play" onclick="findSongChords('Dil Mere', 'Local Train');" style="font-size: 5vh"></i>&emsp;&emsp;&emsp;
+                <i class="fa fa-stop" onclick="stopVideo()" style="font-size: 5vh"></i></br>
         </center>
     </body>
-    <script type="text/javascript" src="Scripts/custom.js">Nothing</script>
+    <script type="text/javascript" src="Scripts/custom.js"></script>
 </html>
